[project]
name = "ais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=1.24.3",
    "pandas>=2.1.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "tensorflow==2.13.0",
    "xgboost>=3.1.2",
]
